--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,24 @@ test = [
     "pytest>=6.0",
 ]
 
+dev = [
+    "ruff>=0.1.0",
+    "pre-commit>=3.0",
+]
+
 [project.scripts]
 permuto = "permuto.cli:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.ruff]
+line-length = 88
+select = ["E", "F", "I", "W", "C90", "N", "UP", "S", "BLE", "FBT", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG", "RUF"]
+ignore = []
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
